# messops

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: core.cpp  libint_bridge.hpp
src/messops/: __init__.py  _core.pyi
tests/: test_benchmark.py  test_package.py
